--- a/Scheduler_v3.vcxproj
+++ b/Scheduler_v3.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="Prompter.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="Writer.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="scheduler3gui.qrc">
