--- a/Scheduler_v3.vcxproj.filters
+++ b/Scheduler_v3.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="Prompter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Writer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="scheduler3gui.h">
@@ -76,6 +79,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Writer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
